[gd_scene load_steps=4 format=2]

[ext_resource path="res://_NonMainGameRelateds/_LevelSelectionRelated/GUIRelateds/GUI_LevelLayout/GUI_AbstractLevelLayout.tscn" type="PackedScene" id=1]
[ext_resource path="res://_NonMainGameRelateds/_LevelSelectionRelated/GUIRelateds/GUI_LevelLayout/LevelLayoutElements/LevelLayout_Tile/GUI_LevelLayoutEle_Tile.tscn" type="PackedScene" id=2]
[ext_resource path="res://_NonMainGameRelateds/_LevelSelectionRelated/GUIRelateds/GUI_LevelLayout_Imps/05/GUI_Imp_LevelLayout_05.gd" type="Script" id=3]

[node name="GUI_Imp_LevelLayout_05" instance=ExtResource( 1 )]
script = ExtResource( 3 )
default_node_to_summon_cursor_on__for_first_time__path = NodePath("LayoutElesContainer/GUI_LevelLayoutEle_Layout_To04")

[node name="GUI_LevelLayoutEle_Layout_To04" parent="LayoutElesContainer" index="0" instance=ExtResource( 2 )]
margin_left = 828.0
margin_top = 322.0
margin_right = 874.0
margin_bottom = 368.0

[node name="GUI_LevelLayoutEle_Path_01" parent="LayoutElesContainer" index="1" instance=ExtResource( 2 )]
margin_left = 828.0
margin_top = 276.0
margin_right = 874.0
margin_bottom = 322.0
is_path = true

[node name="GUI_LevelLayoutEle_Path_02" parent="LayoutElesContainer" index="2" instance=ExtResource( 2 )]
margin_left = 828.0
margin_top = 230.0
margin_right = 874.0
margin_bottom = 276.0
is_path = true

[node name="GUI_LevelLayoutEle_Path_03" parent="LayoutElesContainer" index="3" instance=ExtResource( 2 )]
margin_left = 782.0
margin_top = 230.0
margin_right = 828.0
margin_bottom = 276.0
is_path = true

[node name="GUI_LevelLayoutEle_Path_04" parent="LayoutElesContainer" index="4" instance=ExtResource( 2 )]
margin_left = 736.0
margin_top = 230.0
margin_right = 782.0
margin_bottom = 276.0
is_path = true

[node name="GUI_LevelLayoutEle_Path_05" parent="LayoutElesContainer" index="5" instance=ExtResource( 2 )]
margin_left = 690.0
margin_top = 230.0
margin_right = 736.0
margin_bottom = 276.0
is_path = true

[node name="GUI_LevelLayoutEle_Path_06" parent="LayoutElesContainer" index="6" instance=ExtResource( 2 )]
margin_left = 644.0
margin_top = 230.0
margin_right = 690.0
margin_bottom = 276.0
is_path = true

[node name="GUI_LevelLayoutEle_Tile_01" parent="LayoutElesContainer" index="7" instance=ExtResource( 2 )]
margin_left = 598.0
margin_top = 230.0
margin_right = 644.0
margin_bottom = 276.0

[node name="GUI_LevelLayoutEle_Path_07" parent="LayoutElesContainer" index="8" instance=ExtResource( 2 )]
margin_left = 598.0
margin_top = 184.0
margin_right = 644.0
margin_bottom = 230.0
is_path = true

[node name="GUI_LevelLayoutEle_Path_08" parent="LayoutElesContainer" index="9" instance=ExtResource( 2 )]
margin_left = 598.0
margin_top = 138.0
margin_right = 644.0
margin_bottom = 184.0
is_path = true

[node name="GUI_LevelLayoutEle_Path_09" parent="LayoutElesContainer" index="10" instance=ExtResource( 2 )]
margin_left = 644.0
margin_top = 138.0
margin_right = 690.0
margin_bottom = 184.0
is_path = true

[node name="GUI_LevelLayoutEle_Path_10" parent="LayoutElesContainer" index="11" instance=ExtResource( 2 )]
margin_left = 644.0
margin_top = 92.0
margin_right = 690.0
margin_bottom = 138.0
is_path = true

[node name="GUI_LevelLayoutEle_Tile_02" parent="LayoutElesContainer" index="12" instance=ExtResource( 2 )]
margin_left = 644.0
margin_top = 46.0
margin_right = 690.0
margin_bottom = 92.0

[node name="GUI_LevelLayoutEle_Path_11" parent="LayoutElesContainer" index="13" instance=ExtResource( 2 )]
margin_left = 598.0
margin_top = 46.0
margin_right = 644.0
margin_bottom = 92.0
is_path = true
is_layout_element_invis_by_default = true

[node name="GUI_LevelLayoutEle_Path_12" parent="LayoutElesContainer" index="14" instance=ExtResource( 2 )]
margin_left = 552.0
margin_top = 46.0
margin_right = 598.0
margin_bottom = 92.0
is_path = true
is_layout_element_invis_by_default = true

[node name="GUI_LevelLayoutEle_Layout_To01" parent="LayoutElesContainer" index="15" instance=ExtResource( 2 )]
margin_left = 506.0
margin_top = 46.0
margin_right = 552.0
margin_bottom = 92.0
is_layout_element_invis_by_default = true
